--- a/algorithms/background/SConscript
+++ b/algorithms/background/SConscript
@@ -29,3 +29,9 @@ env.SharedLibrary(target='#/lib/dials_algorithms_background_const_d_ext',
       'const_d/boost_python/ext.cc'
       ],
     LIBS=env["LIBS"])
+
+env.SharedLibrary(target='#/lib/dials_algorithms_background_gmodel_ext', 
+    source = [
+      'gmodel/boost_python/ext.cc'
+      ],
+    LIBS=env["LIBS"])
