Added a function to do anisotropic diffusion

--- a/algorithms/image/filter/SConscript
+++ b/algorithms/image/filter/SConscript
@@ -8,6 +8,7 @@ sources = [
     'boost_python/convolve.cc',
     'boost_python/median.cc',
     'boost_python/distance.cc',
+    'boost_python/anisotropic_diffusion.cc',
     'boost_python/filter_ext.cc']
 
 env.SharedLibrary(target='#/lib/dials_algorithms_image_filter_ext', 
